tests/snapshots/integration__integration_tests__init__init_bash_prompt_hook.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - bash
    - "--hook"
    - prompt
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
# worktrunk shell integration for bash

# Helper function to parse wt output and handle directives
_wt_exec() {
    local output line exit_code
    output="$("wt" "$@" 2>&1)"
    exit_code=$?

    # Parse output line by line
    while IFS= read -r line; do
        if [[ "$line" == __WORKTRUNK_CD__* ]]; then
            # Extract path and change directory
            \cd "${line#__WORKTRUNK_CD__}"
        else
            # Regular output - print it
            echo "$line"
        fi
    done <<< "$output"

    return $exit_code
}

# Main commands that support directory changes
wt-switch() {
    _wt_exec switch --internal "$@"
}

wt-finish() {
    _wt_exec finish --internal "$@"
}


# Prompt hook for tracking current worktree
_wt_prompt_hook() {
    # Call wt to update tracking
    command wt hook prompt 2>/dev/null || true
}

# Add to PROMPT_COMMAND
if [[ -z "${PROMPT_COMMAND}" ]]; then
    PROMPT_COMMAND="_wt_prompt_hook"
else
    PROMPT_COMMAND="${PROMPT_COMMAND}; _wt_prompt_hook"
fi


----- stderr -----
